adding all my tests

--- a/config.properties
+++ b/config.properties
@@ -1,1 +1,16 @@
 bnmUrl = https://www.bnm.md/en/official_exchange_rates?get_xml=1&date=01.10.2024
+
+base_url = https://api.github.com
+token = "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"
+createRepo = https://api.github.com/repos/{owner}/{repo}
+
+rate_limit_url=https://api.github.com/rate_limit
+public_gists_url=https://api.github.com/gists/public
+current_user_url=https://api.github.com/user
+followers_url = https://api.github.com/user/followers
+user_organizations_url = https://api.github.com/user/orgs
+
+bookstore_new_user = https://demoqa.com/Account/v1/User
+bookstore_books = https://demoqa.com/Bookstore/v1/Books
+bookstore_add_books = https://demoqa.com/Bookstore/v1/Books
+bookstore_generate_token = https://demoqa.com/Account/v1/GenerateToken
